# ROS2

fox_ros2/my_robot/: CMakeLists.txt  package.xml
fox_ros2/my_robot/launch/: robot_launch.py  robot_launch.xml
fox_ros2/my_robot/src/: cpp_pub_node.cpp
webots_ros2/my_package/: package.xml
webots_ros2/my_package/launch/: robot_bridge.py
